--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,11 +6,13 @@
 #    By: kmoutaou <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/04/15 21:32:50 by kmoutaou          #+#    #+#              #
-#    Updated: 2022/05/23 01:31:33 by kmoutaou         ###   ########.fr        #
+#    Updated: 2022/05/25 05:27:04 by kmoutaou         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= pushswap
+
+BNAME		= checker_bonus
 
 CC			= cc
 
@@ -20,20 +22,33 @@ SRCS		= main.c tools/lists.c tools/operations1.c tools/atoi.c \
 			  tools/operations2.c tools/sorting1.c tools/sorting2.c \
 			  tools/long_sort1.c tools/long_sort2.c tools/operations3.c
 
+BSRCS		= checker/main.c checker/tools/get_next_line.c \
+			  checker/tools/get_next_line_utils.c checker/tools/outils.c \
+			  tools/lists.c checker/tools/operations1.c tools/atoi.c \
+			  checker/tools/operations2.c checker/tools/operations3.c
+
+
 OBJS		= $(SRCS:.c=.o)
 
-HEADERS		= include/pushswap.h
+BOBJS		= $(BSRCS:.c=.o)
+
+HEADERS		= include/pushswap.h checker/include.checker.h
 
 all: 		$(NAME)
+
+bonus:		$(BNAME)
 
 $(NAME):	$(SRCS)
 			$(CC) $(FLAGS) $(SRCS) -o $(NAME)
 
+$(BNAME):	$(BSRCS)
+			$(CC) $(FLAGS) $(BSRCS) -o $(BNAME)
+
 clean:
-			rm -f $(NAME)
+			rm -f $(NAME) $(BNAME)
 
 fclean: 	clean
-			rm -f $(NAME)
+			rm -f $(NAME) $(BNAME)
 
 re: 		fclean all
 
